--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.arifrgilang.presentation">
 
     <application>
-        <activity android:name="com.arifrgilang.presentation.MainActivity">
+        <activity android:name="com.arifrgilang.presentation.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
